# seedfaker

./: .dockerignore  .editorconfig  .eslintrc.json  .gitignore  .npmrc  .prettierignore  .prettierrc.json  .shellcheckrc  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  FINGERPRINT  Makefile  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: secret_scanning.yml
.github/actions/rust-lint/: action.yml
.github/scripts/: diff-hygiene.sh  fields-check.sh
.github/workflows/: bench.yml  ci.yml  release.yml
benchmarks/: README.md  compare.sh  determinism.sh  fast.sh  fields.sh  full.sh  install.sh  payments_5gb.sh  uniqueness.sh
benchmarks/node/: bench_chance.js  bench_fakerjs.js  bench_falso.js  bench_jsf.js  bench_seedfaker.js  package.json
benchmarks/python/: bench_faker.py  bench_mimesis.py  bench_polyfactory.py  bench_seedfaker.py
benchmarks/results/: comparisons.md  determinism.md  fast.md  fields.md  uniqueness.md
docs/: README.md  annotated.md  cli.md  configs.md  context.md  corruption.md  determinism.md  expressions.md  field-reference.md  fields.md  library.md  mcp.md  multi-table.md  presets.md  quick-start.md  replace.md  streaming.md  templates.md
examples/: 01-basic.sh  02-files.sh  03-formats.sh  04-locales.sh  05-replace.sh  06-determinism.sh  07-streaming.sh  08-templates.sh  09-credentials.sh  10-presets.sh  11-postgres.sh  12-mongo-redis.sh  13-context.sh  14-mcp.sh  15-custom-configs.sh  16-pipes.sh  17-annotated.sh  18-multi-table.sh  19-parallel.sh  20-corruption.sh  docker-compose.yml  run-all.sh
examples/browser/: index.html
examples/go/: main.go
examples/nodejs/: basic.cjs  basic.ts  express_example.js
examples/output/: annotated-csv.jsonl  annotated-pii-leak.jsonl
examples/php/: basic.php
examples/presets/: app-json.txt  auth.txt  chaos.txt  email.txt  llm-prompt.txt  medical.txt  nginx.txt  payment.txt  pii-leak.txt  postgres.txt  stacktrace.txt  syslog.txt  user-table.txt
examples/python/: basic.py  fastapi_example.py
examples/ruby/: basic.rb
guides/: README.md  anonymize-data.md  api-load-testing.md  distributed-generation.md  library-usage.md  mcp-ai-agents.md  mock-api-server.md  reproducible-datasets.md  seed-database.md  seed-large-database.md  training-data.md
rust/: Cargo.toml  deny.toml  rustfmt.toml
rust/.cargo/: config.toml
rust/cli/: Cargo.toml  README.md
rust/cli/src/: aggr.rs  cli.rs  config.rs  engine.rs  field_help.rs  format.rs  main.rs  mcp.rs  meta.rs  writers.rs
rust/cli/src/presets/: app-json.yaml  auth.yaml  chaos.yaml  email-thread.yaml  llm-prompt.yaml  medical.yaml  nginx.yaml  payment.yaml  pii-leak.yaml  postgres.yaml  stacktrace.yaml  syslog.yaml  user-table.yaml
rust/cli/src/tpl/: column.rs  compile.rs  mod.rs  parse.rs  render.rs
rust/cli/src/tpl/compile/: blocks.rs  expr.rs  node.rs
rust/cli/tests/: bindings.rs  cli.rs  config.rs  corruption.rs  cross_determinism.rs  dates.rs  determinism.rs  expressions.rs  fields.rs  formats.rs  golden.tsv  mcp.rs  multi_table.rs  ranges.rs  weights.rs
rust/cli/tests/common/: mod.rs
rust/core/: Cargo.toml  README.md  fields.yaml
rust/core/src/: corrupt.rs  ctx.rs  eval.rs  field.rs  field_gen.rs  lib.rs  opts.rs  pipeline.rs  rng.rs  script.rs  temporal.rs  tz.rs  validate.rs
rust/core/src/locale/: _shared.rs  ar.rs  ar_ae.rs  ar_sa.rs  bd.rs  be.rs  bg.rs  cl.rs  co.rs  cs.rs  cy.rs  da.rs  de.rs  de_at.rs  ec.rs  eg.rs  el.rs  en.rs  en_au.rs  en_ca.rs  en_gb.rs  en_ng.rs  en_nz.rs  en_sg.rs  en_za.rs  es.rs  et.rs  fi.rs  fr.rs  fr_be.rs  fr_ca.rs  ga.rs  he.rs  hi.rs  hr.rs  hu.rs  id.rs  it.rs  ja.rs  ko.rs  (+30 more)
rust/ffi/: Cargo.toml
rust/ffi/src/: lib.rs
rust/napi/: Cargo.toml
rust/napi/src/: lib.rs
rust/pyo3/: Cargo.toml  pyproject.toml
rust/pyo3/src/: lib.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs
tools/: audit.sh  bump-version.sh  field_meta.py  gen-bindings.py  gen-field-reference.sh  gen-fields.py  gen-go-types.py  gen-php-types.py  gen-py-types.py  gen-ts-types.py  inject-checksums.sh  stamp-fingerprint.sh  system-install.sh  test-cross.sh  test-examples.sh  test-mcp.sh  test-npm.sh  test-pip.sh  test-release.sh  update-snapshots.sh  verify-docs.sh
