[package]
name = "seedfaker"
version = "0.3.0-alpha.2"
edition = "2021"
rust-version.workspace = true
authors = ["Eduard Titov <editied@gmail.com>"]
description = "Deterministic synthetic data generator — realistic, correlated, noisy test records across 68 locales (CLI + Python + Node.js + Go + PHP + Ruby + MCP)"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/opendsr-std/seedfaker"
repository = "https://github.com/opendsr-std/seedfaker"
keywords = [
  "faker",
  "synthetic-data",
  "test-data",
  "deterministic",
  "mock-data",
]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "seedfaker"
path = "src/main.rs"


[dependencies]
seedfaker-core = { path = "../core", version = "0.3.0-alpha.2" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2.5"
itoa = "1"

[lints]
workspace = true
