[package]
name = "seedfaker-wasm"
version = "0.3.0-alpha.2"
edition = "2021"
rust-version.workspace = true
authors = ["Eduard Titov <editied@gmail.com>"]
description = "WASM bindings for seedfaker — browser-compatible deterministic synthetic data generator"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
seedfaker-core = { path = "../core", version = "0.3.0-alpha.2" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.getrandom]
version = "0.4"
features = ["wasm_js"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints]
workspace = true
